changed the stop
